--- a/style.css
+++ b/style.css
@@ -152,3 +152,14 @@ footer{
   line-height: 24px;
   padding: 24px 0;
 }
+
+/* media queries*/
+@media (min-width: 700px){
+  :root {
+    --bg-url: url(./assets/bg-desktop.png);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.png);
+  }
+}
